<resources>
    <string name="app_name">Movie Wiki</string>
    <string name="noApi">API Key Not Found. Please Check.</string>
    <string name="errorFetchingData">Error Fetching Data</string>
    <string name="error">Error</string>
    <string name="refresh">Refresh</string>
    <string name="movie_backdrop">Movie Backdrop</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="vote_count">Vote Count</string>
    <string name="information">Information</string>
    <string name="popularity">Popularity</string>
    <string name="movie_title">Movie Title</string>
    <string name="release_date">Release Date</string>
    <string name="overview">Overview</string>
    <string name="other">Other</string>
    <string name="genre">Genre</string>
    <string name="production_companies">Production Companies</string>
    <string name="status">Status</string>
    <string name="movies">Movies</string>
    <string name="tvshow">TV Show</string>
    <string name="settings">Settings</string>
    <string name="total_vote_count">Total Vote Count</string>
    <string name="no_data_receive">No Data Receive</string>
</resources>
