<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="370dp"
                android:orientation="vertical"
                app:layout_collapseMode="parallax"
                android:background="@android:color/transparent">

                <ImageView
                    android:id="@+id/iv_movie_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/movie_backdrop"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@android:color/transparent"/>

                <View
                    android:id="@+id/movie_background"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_alignParentBottom="true"
                    android:alpha="0.8"
                    android:background="@color/colorPrimaryDark"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_movie_backdrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/iv_movie_backdrop" />

                <ImageView
                    android:id="@+id/iv_movie_poster"
                    android:layout_width="110dp"
                    android:layout_height="150dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="215dp"
                    android:contentDescription="@string/movie_poster"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="@+id/movie_background"
                    app:layout_constraintHorizontal_bias="0.053"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/iv_movie_backdrop" />

                <me.grantland.widget.AutofitTextView
                    android:id="@+id/tv_movie_title"
                    style="@style/TextTitle"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="16dp"
                    android:maxLines="2"
                    app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
                    app:layout_constraintTop_toTopOf="@+id/movie_background"
                    tools:text="@string/movie_title" />

                <com.willy.ratingbar.ScaleRatingBar
                    android:id="@+id/rb_movie_vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_title"
                    app:srb_clearRatingEnabled="false"
                    app:srb_clickable="false"
                    app:srb_drawableEmpty="@drawable/ic_star_empty"
                    app:srb_drawableFilled="@drawable/ic_star_filled"
                    app:srb_isIndicator="false"
                    app:srb_numStars="10"
                    app:srb_scrollable="false"
                    app:srb_starHeight="15dp"
                    app:srb_starPadding="1dp"
                    app:srb_starWidth="15dp"
                    app:srb_stepSize="0.5"></com.willy.ratingbar.ScaleRatingBar>

                <me.grantland.widget.AutofitTextView
                    android:id="@+id/tv_movie_vote_count"
                    style="@style/TextBody"
                    android:layout_width="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/vote_count"
                    android:layout_marginStart="28dp"
                    app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
                    app:layout_constraintTop_toBottomOf="@+id/rb_movie_vote_average" />

                <me.grantland.widget.AutofitTextView
                    android:id="@+id/tv_movie_popularity"
                    style="@style/TextBody1"
                    android:maxLines="2"
                    android:text="@string/popularity"
                    android:layout_marginStart="28dp"
                    app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_vote_count"/>

                <me.grantland.widget.AutofitTextView
                    android:id="@+id/tv_movie_release_date"
                    style="@style/TextDate"
                    android:maxLines="2"
                    android:text="@string/release_date"
                    android:layout_marginStart="28dp"
                    app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_popularity"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_detail" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>